# genesis-online

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yaml  main.yaml  pypi_test.yaml  testing.yaml
client/: index.html
docs/: client.md  index.md
docs/services/: catalogue.md  data.md  find.md  metadata.md  overview.md  test.md
genesisonline/: __init__.py  client.py  constants.py  endpoints.py  exceptions.py  filemanager.py  utils.py
genesisonline/services/: __init__.py  base.py  catalogue.py  data.py  find.py  metadata.py  test.py
quick_start/: index.html
search/: search_index.json
services/catalogue/: index.html
services/data/: index.html
services/find/: index.html
services/metadata/: index.html
services/overview/: index.html
services/test/: index.html
src/genesisonline/: constants.py  exceptions.py
src/genesisonline/services/: __init__.py  base.py  catalogue.py  data.py  test.py
tests/: conftest.py  test_client.py  test_filemanager.py
tests/cassettes/test_base/: test_request.yaml
tests/cassettes/test_catalogue/: test_cubes.yaml  test_cubes2statistic.yaml  test_cubes2variable.yaml  test_cubes_not.yaml  test_cubes_params_invalid.yaml  test_cubes_params_misspelled.yaml  test_jobs.yaml  test_modifieddata.yaml  test_qualitysigns.yaml  test_results.yaml  test_statistics.yaml  test_statistics2variable.yaml  test_tables.yaml  test_tables2statistics.yaml  test_tables2variable.yaml  test_tables2variables.yaml  test_terms.yaml  test_timeseries.yaml  test_timeseries2statistic.yaml  test_timeseries2variable.yaml  test_values.yaml  test_values2variable.yaml  (+2 more)
tests/services/: test_base.py  test_catalogue.py  test_data.py  test_find.py  test_metadata.py  test_test.py
utils/: docstrings.txt  extract_docs.ipynb
(+24 files in other folders)
