[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genesisonline"
authors = [{ name = "Roman Maron", email = "rcrmaron@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
keywords = ["GENESIS-Online"]
requires-python = ">=3.5"

dependencies = ["requests >=2.0,<3"]

[project.optional-dependencies]
dev = [
    "pytest >=7.0,<8",
    "vcrpy >=5.0,<6",
    "black >=23.0,<24",
    "responses >=0.0,<1",
    "mkdocs >=1.0,<2",
    "mkdocs-material >=9.0,<10",
    "mkdocstrings[python] >=1.0, <2",
]

[project.urls]
Homepage = "https://github.com/"
