[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "genesisonline"
authors = [{ name = "Roman Maron", email = "rcrmaron@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]
keywords = ["GENESIS-Online"]
requires-python = ">=3.8"

dependencies = ["requests >=2.31,<3"]

[project.optional-dependencies]

test = ["pytest >=7.4.0,<8", "vcrpy >=5.1.0,<6", "responses >=0.23.3,<1"]
docs = [
    "mkdocs >=1.5.2,<2",
    "mkdocs-material >=9.2.8,<10",
    "mkdocstrings[python] >=0.23.0, <1",
]
dev = [
    "black >=23.7.0,<24",
    "pytest >=7.4.0,<8",
    "vcrpy >=5.1.0,<6",
    "responses >=0.23.3,<1",
    "mkdocs >=1.5.2,<2",
    "mkdocs-material >=9.2.8,<10",
    "mkdocstrings[python] >=0.23.0, <1",
]

[project.urls]
Homepage = "https://github.com/"
